--- a/css/index.css
+++ b/css/index.css
@@ -1,78 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-
-
-
-
-
-:root {
-  --primary: #3b4550;
-  --primary-dark: #0a3d66;
-  --primary-hover: #0d5ba8;
-  --primary-light: #09f;
-  --background: #06182a;
-  --text-primary: #ffffff;
-  --text-secondary: #cbd5e1;
-  --text-muted: #94a3b8;
-  --border: rgba(255, 255, 255, 0.1);
-  --card-bg: #1e293b;
-  --shadow: rgba(0, 0, 0, 0.3);
-  --input-bg: #1e293b;
-  --hsla-example: hsla(210, 100%, 56%, 1);
-}
-
-
-
-
-
-
-
-
-
-
-@font-face {
-  font-family: 'Inter Variable';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 100 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/latin-wght-normal.woff2) format('woff2-variations');
-  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
-}
-
-
-
-
-
-
-
-
-
-
-body {
-  font-family: system-ui;
-  background-color: var(--background);
-  color: var(--text-primary);
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  line-height: 1.6;
-}
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* Títulos principales */
 h1 {
@@ -92,17 +17,30 @@ h1 + p {
 header {
   border-bottom: 1px solid var(--border);
   background: var(--background);
-  padding: .5rem 1rem;
+  padding: 1.3rem 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 2rem;
+}
 
-  h2 {
-    font-size: 1.25rem;
-    font-weight: 700;
-    color: var(--text-primary);
-  }
+header h1 {
+  font-size: 1.3rem;
+  font-weight: 700;
+  color: var(--text-primary);
+  margin: 0;
+}
+
+header svg {
+  width: 35px;
+  height: 35px;
+  color: var(--primary-light);
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 /* Navegación del header a otras páginas */
@@ -118,7 +56,7 @@ nav {
     font-weight: 500;
 
     &:hover, &:focus {
-      color: var(--primary);
+      color: var(--primary-hover);
       outline: none;
     }
   }
@@ -134,7 +72,19 @@ header div a {
   font-size: 0.875rem;
   font-weight: 700;
   text-decoration: none;
-  /* TODO */
+}
+
+header div a:hover {
+  background-color: #557198d6;
+}
+
+header div a:first-child {
+  background-color: #1173d433;
+  color: var(--primary-light);
+}
+
+header div a:first-child:hover {
+  background-color: #0f64b96e;
 }
 
 /* Hero */
@@ -153,7 +103,6 @@ main > section:nth-child(1) {
   & > img {
     position: absolute;
     width: 100%;
-    height: 100%;
     object-fit: cover;
     z-index: -1;
     left: 0;
@@ -164,29 +113,18 @@ main > section:nth-child(1) {
 
 /* Formulario de Búsqueda */
 form {
-  max-width: 42rem;
-  width: 100%;
-  margin: 0 auto;
-  padding-inline: 1rem;
-}
-
-form > div {
   display: flex;
   align-items: center;
-  background-color: var(--input-bg);
-  border-radius: 0.5rem;
-  box-shadow: 0 10px 15px -3px var(--shadow);
-  padding: 0.5rem;
   gap: 0.5rem;
+  border-radius: 0.5rem;
+  max-width: 40rem;
+  width: 100%;
+  padding-block: 0.5rem;
+  margin: 0 auto;
+  padding-inline: 1rem 0.5rem;
+  background-color: var(--input-bg);
 }
 
-form span {
-  padding-left: 0.75rem;
-  color: var(--text-muted);
-  display: flex;
-  align-items: center;
-  flex-shrink: 0;
-}
 
 form input[type="text"] {
   flex: 1;
@@ -199,14 +137,10 @@ form input[type="text"] {
   font-family: inherit;
 }
 
-form input[type="text"]::placeholder {
-  color: #64748b;
-}
-
 form button[type="submit"] {
   padding: 0.75rem 1.5rem;
   border-radius: 0.5rem;
-  background-color: var(--primary);
+  background-color: #1173d4;
   color: white;
   font-weight: 700;
   border: none;
@@ -266,35 +200,10 @@ main > section:nth-child(2) > div > div:first-child > p {
 /* Grid de Features */
 main > section:nth-child(2) footer {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 500px));
   gap: 16px
 }
-
-/* Feature Cards */
-/* article {
-  background-color: var(--card-bg);
-  padding: 2rem;
-  margin-bottom: 16px;
-  border-radius: 0.5rem;                   
-  box-shadow: 0px 1px 3px 0 var(--shadow); 
-
-  svg {
-    color: var(--primary-light);          
-    background: rgba(0, 153, 255, 0.3);  
-    border-radius: 9999px;               
-    width: 64px;                         
-    height: 64px;                        
-    padding: 16px;                       
-  }
-
-  h3 {
-    font-weight: 500;
-  }
-
-  p {
-    color: var(--text-muted);
-  }
-} */
 
 /* Footer */
 footer {
