Fix script path in empleos.html and add job application functionality in script.js

--- a/views/empleos.html
+++ b/views/empleos.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Listado con empleos y filtros para encontrar el trabajo de tus sueños.">
 
   <link rel="stylesheet" href="../css/index.css" />
-  <script async src="./script.js"></script>
+  <script async src="../js/script.js"></script>
 </head>
 
 <body>
